# memory_MCP

./: .gitignore  README.md  config.yaml  pyproject.toml  test_full_pipeline.py  test_ollama.py
src/memory_mcp/: config.py  memory_store.py  server.py
src/memory_mcp/agents/: extractor.py  grounder.py  monitor.py  reflector.py
tests/: test_memory.py
